@@ -1,3 +1,9 @@
+2008-03-18  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/make-msi.pl (lang_to_lcid): Support more languages.
+	(gpg4win_nsis_stubs): Likewise.
+	* make-msi.guids: Updated.
+
 2008-03-18  Werner Koch  <wk@g10code.com>
 
 	* packages/packages.current: Update GpgOL.
